Updated duck.